Update Android namespace from 'com.example.gehnaorg' to 'com.admin.jeweller'

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 android {
-    namespace = "com.example.gehnaorg"
+    namespace = "com.admin.jeweller"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
