Update Android namespace and app label to 'com.admin.wholesaler' and 'Jeweller Admin' respectively

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 android {
-    namespace = "com.admin.jeweller"
+    namespace = "com.admin.wholesaler"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
